# claudetax-2025

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  README.md  claudepad.md  pyproject.toml  requirements.txt
skill/: SKILL.md  __init__.py
skill/fixtures/multi_state_part_year_pa_il/: expected.json  input.json
skill/fixtures/se_home_office/: expected.json  input.json
skill/fixtures/senior_with_tips/: expected.json  input.json
skill/fixtures/simple_w2_standard/: expected.json  input.json
skill/fixtures/w2_investments_itemized/: expected.json  input.json
skill/reference/: ar-ar1000f-acroform-map.json  az-140-acroform-map.json  ca-540-acroform-map.json  co-dr0104-acroform-map.json  cp4-tenforty-verification.md  ffff-limits.md  form-1040-acroform-map.json  form-1040-acroform-methodology.md  form-4562-acroform-map.json  form-6251-acroform-map.json  form-8829-acroform-map.json  form-8949-acroform-map.json  hi-n11-acroform-map.json  id-40-acroform-map.json  il-1040-acroform-map.json  in-it40-acroform-map.json  irs-mailing-addresses.json  ks-k40-acroform-map.json  ky-740-acroform-map.json  la-it540-acroform-map.json  ma-form1-acroform-map.json  md-502-acroform-map.json  me-1040me-acroform-map.json  mi-1040-acroform-map.json  mn-m1-acroform-map.json  mo-1040-acroform-map.json  ms-80105-acroform-map.json  mt-form2-acroform-map.json  nc-d400-acroform-map.json  nd-1-acroform-map.json  nj-1040-acroform-map.json  ny-it201-acroform-map.json  oh-it1040-acroform-map.json  ok-511-acroform-map.json  or-40-acroform-map.json  pa-40-acroform-map.json  schedule-a-acroform-map.json  schedule-b-acroform-map.json  schedule-c-acroform-map.json  schedule-d-acroform-map.json  (+11 more)
skill/schemas/: return.schema.json
skill/scripts/: __init__.py  cli.py  email_scanner.py  generate_schema.py  gmail_setup.py  models.py  pipeline.py  probe_tenforty_states.py
skill/scripts/calc/: __init__.py  constants.py  engine.py  macrs_tables.py
skill/tests/: conftest.py  test_1099r_retirement_income.py  test_calc_ctc.py  test_calc_eitc.py  test_calc_form_4547.py  test_calc_niit.py  test_calc_obbba_schedule_1a.py  test_calc_obbba_senior.py  test_calc_qbi.py  test_canonical_return.py  test_cli.py  test_cp8_d_model_extensions.py  test_email_scanner.py  test_engine_obbba_wiring.py  test_engine_patch_integration.py  test_engine_regression.py  test_engine_warnings.py  test_ffff_entry_map.py  test_form_2441.py  test_form_4562_compute.py  test_form_4562_render.py  test_form_4797.py  test_form_6251_compute.py  test_form_6251_render.py  test_form_8606.py  test_form_8829_compute.py  test_form_8829_render.py  test_form_8863.py  test_form_8949_render.py  test_form_8962.py  test_golden_multi_state_pa_il.py  test_golden_se_home_office.py  test_golden_senior_with_tips.py  test_golden_simple_w2.py  test_golden_w2_investments_itemized.py  test_infrastructure_cleanup.py  test_ingest_1095_a_acroform.py  test_ingest_1098_acroform.py  test_ingest_1098_e_acroform.py  test_ingest_1098_t_acroform.py  (+83 more)
(+104 files in other folders)
